@@ -5,7 +5,7 @@
 //   Jb Evain (jbevain@gmail.com)
 //
 // Generated by /CodeGen/cecil-gen.rb do not edit
-// Thu Sep 07 13:28:11 CEST 2006
+// Tue Sep 19 01:40:24 CEST 2006
 //
 // (C) 2005 Jb Evain
 //
@@ -40,7 +40,7 @@ namespace Mono.Cecil.Cil {
 
 		IList m_items;
 		MethodBody m_container;
-		public readonly Instruction Outside = new Instruction (OpCodes.Nop);
+		public readonly Instruction Outside = new Instruction (-1, OpCodes.Nop);
 
 		public Instruction this [int index] {
 			get { return m_items [index] as Instruction; }
