@@ -1,5 +1,9 @@
 2006-09-19  Jb Evain  <jbevain@gmail.com>
 
+	* Mono.Cecil.Cil/InstructionCollection.cs
+	  CodeGen/templates/IndexedCollection.cs:
+		The outside instruction has an offset of -1.
+
 	* Mono.Cecil.Cil/OpCodes.cs
 	  Mono.Cecil.Cil/CodeReader.cs
 	  Mono.Cecil.Cil/OpCode.cs
